...
    android:paddingTop="20dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    tools:context=".GameActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
...
            android:textColor="@color/colorAccent2"
            android:textSize="40sp"
            android:textAlignment="center" />

        <TextView
            android:layout_marginBottom="20dp"
            android:id="@+id/waitingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent2"
            android:text="@string/waiting"
            android:textSize="30sp"
            android:textAlignment="center" />
...
